[package]
name = "raytracer"
version = "0.1.0"
authors = ["lc0305@github"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.11.3"
image = "0.23.7"
ndarray = "0.13"
# ndarray-linalg = { version = "0.12", features = ["intel-mkl"] }