[package]
name = "raytracer"
version = "0.1.0"
authors = ["lc0305@github"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.11.3"
image = "0.23.7"
ndarray = "0.13"
crossbeam = "0.7.3"
itertools = "0.9.0"